<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/facebook_color"
    android:clickable="false"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".pages">

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true">

        <TextView
            android:id="@+id/register"
            style="@style/bigtexheader_basics"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/register_text" />

        <EditText
            android:id="@+id/dateofB_editText"
            style="@style/edittext_basics"
            android:inputType="date"
            android:layout_width="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/register"
            android:layout_centerHorizontal="true"
            android:ems="10"
            android:text="@string/clear"
            android:hint="@string/dateofb_text" />

        <EditText
            android:id="@+id/snn_editText"
            style="@style/edittext_basics"
            android:layout_width="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/dateofB_editText"
            android:layout_centerHorizontal="true"
            android:ems="10"
            android:text="@string/clear"
            android:hint="@string/ssn_text" />

        <EditText
            android:id="@+id/phoneN_student_editText"
            style="@style/edittext_basics"
            android:layout_width="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/snn_editText"
            android:layout_centerHorizontal="true"
            android:ems="10"
            android:text="@string/clear"
            android:hint="@string/phone_text" />

        <EditText
            android:id="@+id/address_student_editText"
            style="@style/edittext_basics"
            android:layout_width="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/phoneN_student_editText"
            android:layout_centerHorizontal="true"
            android:ems="10"
            android:hint="@string/address_text" />

        <Spinner
            android:id="@+id/spinner_gender"
            style="@style/edittext_basics"
            android:layout_width="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/address_student_editText"
            android:layout_centerHorizontal="true"
            android:entries="@array/gender_arrays"
            android:spinnerMode="dropdown" />

        <EditText
            android:id="@+id/nation_editText"
            style="@style/edittext_basics"
            android:layout_width="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/spinner_gender"
            android:layout_centerHorizontal="true"
            android:ems="10"
            android:text="@string/clear"
            android:hint="@string/nation_text" />



        <Button
            android:id="@+id/register2__student_update_button"
            style="@style/button_basics"
            android:layout_width="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/nation_editText"
            android:layout_centerHorizontal="true"
            android:background="@drawable/button_color"
            android:text="@string/update_button_text" />

        <Button
            android:id="@+id/register2_student_skip_button"
            style="@style/button_basics"
            android:layout_width="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/register2__student_update_button"
            android:layout_centerHorizontal="true"
            android:background="@drawable/button_color"
            android:text="@string/skip_button_text" />
    </RelativeLayout>
</RelativeLayout>
