<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/facebook_color"
    android:clickable="false"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".pages">

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true">

        <TextView
            android:id="@+id/register"
            style="@style/bigtexheader_basics"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/register_text" />

        <EditText
            android:id="@+id/comname_editText"
            style="@style/edittext_basics"
            android:layout_width="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/register"
            android:layout_centerHorizontal="true"
            android:ems="10"
            android:hint="@string/comname_text" />

        <Spinner
            android:id="@+id/spinner_department"
            style="@style/edittext_basics"
            android:layout_width="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/comname_editText"
            android:layout_centerHorizontal="true"
            android:entries="@array/department_arrays"
            android:spinnerMode="dropdown" />

        <EditText
            android:id="@+id/companyregister_email_editText"
            style="@style/edittext_basics"
            android:layout_width="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/spinner_department"
            android:layout_centerHorizontal="true"
            android:ems="10"
            android:hint="@string/email_text" />

        <EditText
            android:id="@+id/companyregister_password_editText"
            style="@style/edittext_basics"
            android:layout_width="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/companyregister_email_editText"
            android:layout_centerHorizontal="true"
            android:ems="10"
            android:hint="@string/password_text"
            android:inputType="textPassword" />

        <Spinner
            android:id="@+id/spinner_country"
            style="@style/edittext_basics"
            android:layout_width="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/companyregister_password_editText"
            android:layout_centerHorizontal="true"
            android:entries="@array/country_arrays"
            android:spinnerMode="dropdown" />

        <EditText
            android:id="@+id/company_city_editText"
            style="@style/edittext_basics"
            android:layout_width="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/spinner_country"
            android:layout_centerHorizontal="true"
            android:ems="10"
            android:hint="@string/city_text" />

        <Button
            android:id="@+id/register_company_signup_button"
            style="@style/button_basics"
            android:layout_width="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/company_city_editText"
            android:layout_centerHorizontal="true"
            android:background="@drawable/button_color"
            android:text="@string/signup_text" />
    </RelativeLayout>
</RelativeLayout>
